deployment/iaac/k8s/pinklifeline-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pinklifeline
  name: pinklifeline
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: pinklifeline
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pinklifeline
    spec:
      containers:
      - name: pinklifeline
        image: sadatul/pinklifeline_prod:1.0.6-RELEASE
        imagePullPolicy: Always
        ports:
        - name: liveness-port
          containerPort: 8080
        volumeMounts:
          - name: sm-secret-volume
            mountPath: /secrets/
            readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /v1/hello/healthy
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /v1/hello/healthy
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
        ports: 
          - containerPort: 3306
        args:
          - "--structured-logs"
          - "--port=3306"
          - "pinklifeline:asia-south1:pinklifeline-database-instance"
          - "--credentials-file=/secrets/service_account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
          - name: cloud-sql-secret-volume
            mountPath: /secrets/
            readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu:    "100m"
      volumes:
        - name: cloud-sql-secret-volume
          secret:
            secretName: cloud-sql-secret
        - name: sm-secret-volume
          secret:
            secretName: sm-secret
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
