deployment/iaac/k8s/pinklifeline-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pinklifeline
  name: pinklifeline-rabbitmq
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: pinklifeline-rabbitmq
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pinklifeline-rabbitmq
    spec:
      containers:
      - name: pinklifeline-rabbitmq
        image: sadatul/pinklifeline-rabbitmq-stomp
        imagePullPolicy: Always
        ports:
        - name: liveness-port
          containerPort: 61613
        - name: management-port
          containerPort: 15672
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /api/healthchecks/node
            port: management-port
            httpHeaders:
            - name: Authorization
              value: Basic Z3Vlc3Q6Z3Vlc3Q=  # base64-encoded guest:guest
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /api/healthchecks/node
            port: management-port
            httpHeaders:
            - name: Authorization
              value: Basic Z3Vlc3Q6Z3Vlc3Q=  # base64-encoded guest:guest
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 5
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
