deployment/iaac/k8s/pinklifeline-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pinklifeline
  name: pinklifeline
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "websocket-backend-config"}'
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pinklifeline
  sessionAffinity: ClientIP
  type: NodePort
