deployment/iaac/k8s/pinklifeline-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pinklifeline
  name: pinklifeline-rabbitmq
  namespace: default
spec:
  ports:
  - name: stomp
    port: 61613
    targetPort: 61613
  - name: management
    port: 15672
    targetPort: 15672
  selector:
    app: pinklifeline-rabbitmq
  type: NodePort
