deployment/iaac/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinklifeline-ingress
  labels:
    app: pinklifeline
  namespace: default
  annotations:
    # kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "pinklifeline-appserver-ip"
    networking.gke.io/managed-certificates: "api-ssl-cert"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pinklifeline
            port:
              number: 8080
